# cvp-vscode-extension-refactor-suggestions-for-code-comments-cmd67627

./: .env.example  .gitignore  AI_PROJECT_PROMPT.md  BLUEPRINT.json  PROJECT_DETAILS.json  README.md  TECHNICAL_STACK.json  main.py  original-spec-bundle-cvp-vscode-extension-refactor-suggestions-for-code-comments-cmd67627.md  pyproject.toml
